# p346-computational-physics

./: .buildinfo  .gitignore  3. galaxy.ipynb  4. heating walls.ipynb  4. heating walls.py  5a. population growth and hunting copy.ipynb  5a. population growth and hunting.ipynb  5b. hunting and diffusion.ipynb  5c. hunting and diffusion on rough terrain.ipynb  HEATFAST.ipynb  README.md  a.py  dams copy.ipynb  dams.html  dams.ipynb  dams.py  dat.csv  edge.html  edge.ipynb  galaxy.html  galaxy.ipynb  genindex.html  heat copy.py  heat.py  heat1.py  heating.html  heating.ipynb  home.html  hunting.html  hunting.ipynb  hunting1.html  hunting2.html  hunting3.html  hunttt copy.ipynb  hunttt dirchlet.ipynb  hunttt.ipynb  intro.html  listings.py  markdown-notebooks.html  markdown.html  (+14 more)
_sources/: dams.ipynb  galaxy.ipynb  heating.ipynb  home.md  hunting.ipynb  hunting.md  hunting1.ipynb  hunting2.ipynb  hunting3.ipynb
assignments/: assignment1.ipynb  assignment10.ipynb  assignment11.ipynb  assignment12.ipynb  assignment13.ipynb  assignment14.ipynb  assignment15.ipynb  assignment2.ipynb  assignment3.ipynb  assignment4.ipynb  assignment5.ipynb  assignment6.ipynb  assignment7.ipynb  assignment8.ipynb  assignment9.ipynb
classwork/: 1. Python Basics.ipynb  3. Differentiation.ipynb  4. Matrices I.ipynb  4. Matrices II.ipynb  5. Roots.ipynb  6. Optimization.ipynb  7. Integration.ipynb  8. ODEs.ipynb  8_August_2024.ipynb  9. Monte Carlo.ipynb  P346_745-Aug14.ipynb  P346_P745-Aug21&22.ipynb  P346_P745-Aug28&29.ipynb  P346_P745-Nov13&14.ipynb  P346_P745-Nov6&7.ipynb  P346_P745-Sep4&5.ipynb  (+7 more)
(+31 files in other folders)
